--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tauri:dev": "cargo tauri dev",
+    "tauri:build": "cargo tauri build",
+    "tauri:build:debug": "cargo tauri build --debug",
+    "tauri:icon": "cargo tauri icon"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
