Implement TBD events, routine editor, and update docs
Added support for TBD (To Be Determined) date and time options for scheduled events, including UI/UX enhancements, accessibility improvements, and comprehensive event categorization. Introduced a new RoutineEditor component for unified routine management, updated DayPlanner integration, and created supporting hooks and utilities. Project documentation and agent configuration files were updated to reflect new workflows, agent roles, and project memory update protocols.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "autism-buddy-planner",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
+  "description": "Autism-friendly daily routine planner with desktop app support",
+  "author": "Wavegoodvybe2929",
+  "repository": {
+    "type": "git",
+    "url": "autism-buddy-planner"
+  },
+  "keywords": ["autism", "planner", "routine", "accessibility", "tauri", "react", "typescript"],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
